[package]
name = "mnem-llm-providers"
description = "Text-generation adapters for mnem (OpenAI chat, Ollama chat) for HyDE, multi-query, and future LLM-in-the-loop features. Sync, TLS-via-rustls, tokio-free."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mnem", "llm", "openai", "ollama", "hyde"]
categories = ["api-bindings", "text-processing"]
readme = "README.md"
documentation = "https://docs.rs/mnem-llm-providers"

# docs.rs: every feature is empty (`[]`) - no optional deps, no
# platform gating. Safe to build with `all-features = true`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["openai", "ollama"]
openai = []
ollama = []
integration-tests = []

[dependencies]
mnem-core  = { path = "../mnem-core", version = "=0.1.0" }
serde      = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror  = { workspace = true }
# ureq matches the pattern across mnem's other provider crates:
# sync, rustls-backed, no tokio.
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
toml = "1"
