[package]
name = "mnem-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mnem-core = { path = "../mnem-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# uuid "js" feature needed so UUID v7 generation works in WASM (uses Math.random via getrandom/js)
uuid = { workspace = true, features = ["js"] }
# getrandom "js" feature routes entropy through the browser's crypto API
getrandom = { version = "0.2", features = ["js"] }
